[gd_scene load_steps=6 format=3 uid="uid://duevw8ikxn5kj"]

[ext_resource type="Script" uid="uid://dh057ifnoswvq" path="res://scripts/menu.gd" id="1_jf58a"]
[ext_resource type="AudioStream" uid="uid://f6q46g68fwt7" path="res://audio/sfx/menu/Menu_Hover.wav" id="2_ndaih"]
[ext_resource type="Theme" uid="uid://bty2q8m8jwn5t" path="res://shaders/ui/theme.tres" id="3_vw818"]
[ext_resource type="AudioStream" uid="uid://bxy8idshrtel0" path="res://audio/sfx/menu/Menu_Press.wav" id="4_2c34c"]
[ext_resource type="Texture2D" uid="uid://d2ddctgmyhuhq" path="res://textures/logo/logo.png" id="6_vibko"]

[node name="Menu" type="CanvasLayer" node_paths=PackedStringArray("hover_sound_player", "press_sound_player", "main_menu", "resume_button", "options_button", "controls_button", "credits_button", "quit_button", "game_menu", "load_menu", "delete_menu", "options_menu", "options_master_slider", "options_sfx_slider", "options_music_slider", "options_display_dropdown", "options_back_button", "controls_menu", "credits_menu")]
process_mode = 3
script = ExtResource("1_jf58a")
hover_sound_player = NodePath("Hovered")
press_sound_player = NodePath("Pressed")
hover_sound = ExtResource("2_ndaih")
press_sound = ExtResource("4_2c34c")
main_menu = NodePath("CenterContainer/Main")
resume_button = NodePath("CenterContainer/Main/Resume")
options_button = NodePath("CenterContainer/Main/Options")
controls_button = NodePath("CenterContainer/Main/Controls")
credits_button = NodePath("CenterContainer/Main/Credits")
quit_button = NodePath("CenterContainer/Main/Quit")
game_menu = NodePath("CenterContainer/Game")
load_menu = NodePath("CenterContainer/Load")
delete_menu = NodePath("CenterContainer/Delete")
save_theme = ExtResource("3_vw818")
options_menu = NodePath("CenterContainer/Options")
options_master_slider = NodePath("CenterContainer/Options/HBoxContainer/HSlider")
options_sfx_slider = NodePath("CenterContainer/Options/HBoxContainer2/HSlider")
options_music_slider = NodePath("CenterContainer/Options/HBoxContainer3/HSlider")
options_display_dropdown = NodePath("CenterContainer/Options/OptionButton")
options_back_button = NodePath("CenterContainer/Options/Back")
controls_menu = NodePath("CenterContainer/Controls")
credits_menu = NodePath("CenterContainer/Credits")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0509804, 0.0509804, 0.0509804, 0.913725)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Logo" type="Sprite2D" parent="CenterContainer/Main"]
position = Vector2(53, -38)
scale = Vector2(0.136935, 0.136935)
texture = ExtResource("6_vibko")

[node name="Resume" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Game")
theme = ExtResource("3_vw818")
text = "RESUME"
icon_alignment = 1

[node name="Game" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vw818")
text = "GAME
"
icon_alignment = 1

[node name="Options" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vw818")
text = "OPTIONS"
icon_alignment = 1

[node name="Controls" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "CONTROLS
"
icon_alignment = 1

[node name="Credits" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vw818")
text = "CREDITS
"
icon_alignment = 1

[node name="Quit" type="Button" parent="CenterContainer/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "QUIT"
icon_alignment = 1

[node name="Game" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Restart" type="Button" parent="CenterContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vw818")
text = "RESTART FROM CHECKPOINT"
icon_alignment = 1

[node name="New" type="Button" parent="CenterContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "NEW GAME
"
icon_alignment = 1

[node name="Load" type="Button" parent="CenterContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "LOAD GAME
"
icon_alignment = 1

[node name="Delete" type="Button" parent="CenterContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "DELETE GAME
"
icon_alignment = 1

[node name="Back" type="Button" parent="CenterContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Load" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Back" type="Button" parent="CenterContainer/Load"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Delete" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Back" type="Button" parent="CenterContainer/Delete"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Options" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_vw818")
alignment = 1

[node name="Master" type="Label" parent="CenterContainer/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_vw818")
text = "MASTER:"

[node name="HSlider" type="HSlider" parent="CenterContainer/Options/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_vw818")
step = 10.0
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_vw818")
alignment = 1

[node name="Sfx" type="Label" parent="CenterContainer/Options/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("3_vw818")
text = "SFX:"

[node name="HSlider" type="HSlider" parent="CenterContainer/Options/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_vw818")
step = 10.0
value = 100.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_vw818")
alignment = 1

[node name="Music" type="Label" parent="CenterContainer/Options/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_vw818")
text = "MUSIC:"

[node name="HSlider" type="HSlider" parent="CenterContainer/Options/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_vw818")
step = 10.0
value = 100.0

[node name="OptionButton" type="OptionButton" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_vw818")
selected = 0
item_count = 2
popup/item_0/text = "FULLSCREEN"
popup/item_0/id = 0
popup/item_1/text = "WINDOWED"
popup/item_1/id = 1

[node name="Back" type="Button" parent="CenterContainer/Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Controls" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Controls"]
layout_mode = 2
theme = ExtResource("3_vw818")
bbcode_enabled = true
text = "[center] [color=#ececec]Goal[/color][color=#858585]- Escape limbo and regain life by defeating sin incarnate[/color]
[color=#ececec]Wasd / Arrows / Mouse / Space [/color][color=#858585]- Move / Sprint / Look / Jump [/color]
[color=#ececec]Hold Mouse [/color][color=#858585]- Spin Attack  [/color]
[color=#ececec]Middle Mouse[/color][color=#858585]- Camera lock on [/color]
[/center] "
fit_content = true
autowrap_mode = 0

[node name="Back" type="Button" parent="CenterContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Credits" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Credits"]
layout_mode = 2
theme = ExtResource("3_vw818")
bbcode_enabled = true
text = "[center] [color=#ececec] Boss Rush Jam[/color][color=#858585] - 2025 \"Spin\" Entry [/color]
[color=#ececec]ClairdeLou[/color][color=#858585] - Music - USA [/color]
[color=#ececec]Jcmusik08 [/color][color=#858585]- Sound Design - USA [/color]
[color=#ececec]NaisSais[/color][color=#858585] - Modeling / Texturing - Russia [/color]
[color=#ececec]Nemo [/color][color=#858585]- Animation / Programming - USA  [/color]
[color=#ececec]Kenney / Le Lu / DisplacedFikaDev [/color][color=#858585]- Shaders / Free Resources  [/color]
[/center]"
fit_content = true
autowrap_mode = 0

[node name="Back" type="Button" parent="CenterContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_vw818")
text = "BACK
"
icon_alignment = 1

[node name="Hovered" type="AudioStreamPlayer2D" parent="."]
attenuation = 1e-05
bus = &"SFX"

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
attenuation = 1e-05
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="focus_entered" from="CenterContainer/Main/Resume" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Resume" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Resume" to="." method="_on_resume_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Main/Resume" to="CenterContainer/Main/Resume" method="grab_focus"]
[connection signal="focus_entered" from="CenterContainer/Main/Game" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Game" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Game" to="." method="_on_game_pressed"]
[connection signal="focus_entered" from="CenterContainer/Main/Options" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Options" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="CenterContainer/Main/Controls" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Controls" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Controls" to="." method="_on_controls_pressed"]
[connection signal="focus_entered" from="CenterContainer/Main/Credits" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Credits" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="CenterContainer/Main/Quit" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Main/Quit" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="focus_entered" from="CenterContainer/Game/Restart" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Game/Restart" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Game/Restart" to="." method="_on_game_restart_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Game/Restart" to="CenterContainer/Game/Restart" method="grab_focus"]
[connection signal="focus_entered" from="CenterContainer/Game/New" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Game/New" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Game/New" to="." method="_on_game_new_pressed"]
[connection signal="focus_entered" from="CenterContainer/Game/Load" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Game/Load" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Game/Load" to="." method="_on_game_load_pressed"]
[connection signal="focus_entered" from="CenterContainer/Game/Delete" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Game/Delete" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Game/Delete" to="." method="_on_game_delete_pressed"]
[connection signal="focus_entered" from="CenterContainer/Game/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Game/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Game/Back" to="." method="_on_game_back_pressed"]
[connection signal="focus_entered" from="CenterContainer/Load/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Load/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Load/Back" to="." method="_on_load_back_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Load/Back" to="CenterContainer/Load/Back" method="grab_focus"]
[connection signal="focus_entered" from="CenterContainer/Delete/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Delete/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Delete/Back" to="." method="_on_delete_back_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Delete/Back" to="CenterContainer/Delete/Back" method="grab_focus"]
[connection signal="mouse_entered" from="CenterContainer/Options/HBoxContainer" to="." method="_play_hover_sound"]
[connection signal="visibility_changed" from="CenterContainer/Options/HBoxContainer" to="CenterContainer/Options/HBoxContainer" method="grab_focus"]
[connection signal="focus_entered" from="CenterContainer/Options/HBoxContainer/HSlider" to="." method="_play_hover_sound"]
[connection signal="value_changed" from="CenterContainer/Options/HBoxContainer/HSlider" to="." method="_on_master_changed"]
[connection signal="visibility_changed" from="CenterContainer/Options/HBoxContainer/HSlider" to="CenterContainer/Options/HBoxContainer/HSlider" method="grab_focus"]
[connection signal="mouse_entered" from="CenterContainer/Options/HBoxContainer2" to="." method="_play_hover_sound"]
[connection signal="focus_entered" from="CenterContainer/Options/HBoxContainer2/HSlider" to="." method="_play_hover_sound"]
[connection signal="value_changed" from="CenterContainer/Options/HBoxContainer2/HSlider" to="." method="_on_sfx_changed"]
[connection signal="mouse_entered" from="CenterContainer/Options/HBoxContainer3" to="." method="_play_hover_sound"]
[connection signal="focus_entered" from="CenterContainer/Options/HBoxContainer3/HSlider" to="." method="_play_hover_sound"]
[connection signal="value_changed" from="CenterContainer/Options/HBoxContainer3/HSlider" to="." method="_on_music_changed"]
[connection signal="focus_entered" from="CenterContainer/Options/OptionButton" to="." method="_play_hover_sound"]
[connection signal="item_selected" from="CenterContainer/Options/OptionButton" to="." method="_on_window_mode_changed"]
[connection signal="mouse_entered" from="CenterContainer/Options/OptionButton" to="." method="_play_hover_sound"]
[connection signal="focus_entered" from="CenterContainer/Options/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Options/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Options/Back" to="." method="_on_options_back_pressed"]
[connection signal="focus_entered" from="CenterContainer/Controls/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Controls/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Controls/Back" to="." method="_on_controls_back_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Controls/Back" to="CenterContainer/Controls/Back" method="grab_focus"]
[connection signal="focus_entered" from="CenterContainer/Credits/Back" to="." method="_play_hover_sound"]
[connection signal="mouse_entered" from="CenterContainer/Credits/Back" to="." method="_play_hover_sound"]
[connection signal="pressed" from="CenterContainer/Credits/Back" to="." method="_on_credits_back_pressed"]
[connection signal="visibility_changed" from="CenterContainer/Credits/Back" to="CenterContainer/Credits/Back" method="grab_focus"]
[connection signal="timeout" from="Timer" to="." method="_check_for_window_changes"]
